--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "dairan",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "js-cookie": "^2.2.1"
   },
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.3",
