--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "js-cookie": "^2.2.1"
+    "js-cookie": "^2.2.1",
+    "@babel/runtime": "^7.12.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-typescript": "^8.1.0",
     "rollup": "^2.35.1",
